MFA - SCRUM-6 - remove access

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-aws.accessKeyId=AKIAXWO7YJYRRRIATOAG
-aws.secretAccessKey=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
+aws.accessKeyId=
+aws.secretAccessKey=
 aws.region=eu-west-3
 app.s3.bucket-name=Moviid
